syntax = "proto3";
 
package clihandler;

option go_package="github.com/kubearmor/KVMService/operator/protobuf";


message cliRequest {
    string kvmName = 1;
}

message status {
    string scriptData = 1;
    string statusMsg = 2;
    int32 status = 3;
}

service HandleCli {
    rpc handleCliRequest (cliRequest) returns (status);
}

